--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend-nanodegree-neighborhood-map",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://musaab-abdalla.github.io/frontend-nanodegree-neighborhood-map",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "google-maps-react": "^2.0.2",
@@ -14,8 +13,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,7 +24,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  "devDependencies": {}
 }
